--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="text">Seconds</span>
         </div>
         <div>
-            <span id="ampm">AM</span>
+            <span id="ampm">PM</span>
             
         </div>
     </div>
